# text2cypher-model

./: .gitignore  Dockerfile  Dockerfile.inference  Dockerfile.training  Makefile  README.md  evaluate_model.py  pyproject.toml  train.py
.github/scripts/: deploy_sagemaker_endpoint.py  sagemaker_pipeline.py  trigger_sagemaker.py  trigger_sagemaker_pipeline.py
.github/workflows/: dev-train.yaml  prod-promote-to-stable.yaml  prod-train.yaml  staging-train.yaml  terraform-destroy.yaml
scripts/: evaluate_model.py  preprocessing.py  run_pipeline.py  train.py
src/finetuning/eval/: metrics.py
src/text2cypher/api/: config.py  inference.py
src/text2cypher/finetuning/: evaluate_model.py  post_training.py  pre_training.py  preprocessing.py  train.py
src/text2cypher/finetuning/config/: config.dev.yaml  config.prod.yaml  config.staging.yaml  config.yaml
src/text2cypher/finetuning/data/: notechat_dataset.csv  notechat_dataset.py  notechat_preprocessing.py
src/text2cypher/finetuning/eval/: metrics.py  prompts.py
src/text2cypher/finetuning/models/: base_model.py  t5_model.py
src/text2cypher/finetuning/utils/: load_models.py  logger.py  text_utils.py
terraform-lambda-sagemaker/: main.tf  outputs.tf
terraform-lambda-sagemaker/lambda_function/: lambda_function.py
terraform/alb/: alb.tf  canary.tf  listener.tf  outputs.tf  target_group.tf  variables.tf
terraform/ecs/: capacity_provider.tf  cluster.tf  logs.tf  outputs.tf  service.tf  task_definition.tf  variables.tf
terraform/envs/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/envs/prod/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/envs/staging/: backend.tf  main.tf  terraform.tfvars
terraform/iam/: iam.tf  outputs.tf  variables.tf
terraform/network/: alb_sg.tf  igw_nat.tf  outputs.tf  security_group.tf  subnet.tf  variables.tf  vpc.tf
tests/: conftest.py  utils.py
tests/e2e/: test_full_pipeline.py
tests/integration/: fakes.py  test_evaluation_pipeline 2.py  test_evaluation_pipeline.py  test_preprocessing_pipeline.py  test_training_pipeline 2.py  test_training_pipeline.py
tests/resources/: notechat_sample_dataset.csv
tests/resources/artifacts/: .no-pipeline-id_best_model.ckpt-v1.ckpt.icloud  .no-pipeline-id_best_model.ckpt-v2.ckpt.icloud  .no-pipeline-id_best_model.ckpt-v3.ckpt.icloud  .no-pipeline-id_best_model.ckpt.ckpt.icloud  .pipeline_id_best_model-v1.ckpt.icloud  .pipeline_id_best_model-v2.ckpt.icloud  .pipeline_id_best_model-v3.ckpt.icloud  .pipeline_id_best_model-v4.ckpt.icloud  .pipeline_id_best_model-v5.ckpt.icloud  .pipeline_id_best_model-v6.ckpt.icloud  .pipeline_id_best_model-v7.ckpt.icloud  .pipeline_id_best_model-v8.ckpt.icloud  .pipeline_id_best_model.ckpt-v1.ckpt.icloud  .pipeline_id_best_model.ckpt-v2.ckpt.icloud  .pipeline_id_best_model.ckpt-v3.ckpt.icloud  .pipeline_id_best_model.ckpt.ckpt.icloud  .pipeline_id_best_model.ckpt.icloud
tests/resources/config/: config.test.yaml
tests/resources/preprocessed/: notechat_sample_dataset_test.parquet  notechat_sample_dataset_val.parquet
tests/resources/preprocessed/preprocessed-dev/: notechat_sample_dataset_train.parquet
tests/unit/: test_data.py  test_metrics.py  test_models.py
